<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_cancel">@string/dialog_btn_cancel</string>
    <string name="alert_device_has_root_exit">Sair</string>
    <string name="alert_device_has_root_exit_alt">OK fui avisado</string>
    <string name="alert_device_has_root_message">A configuração do dispositivo não garante a utilização desta app em segurança.</string>
    <string name="alert_device_has_root_title">Dispositivo não seguro</string>
    <string name="alert_device_is_emulator_exit">OK fui avisado</string>
    <string name="alert_device_is_emulator_exit_alt">OK fui avisado</string>
    <string name="alert_device_is_emulator_message">Emulador detectado, esta aplicação pode não funcionar correctamente em emuladores.</string>
    <string name="alert_device_is_emulator_title">Emulador detectado</string>
    <string name="alert_device_not_secure_exit">Sair</string>
    <string name="alert_device_not_secure_exit_alt">OK fui avisado</string>
    <string name="alert_device_not_secure_message">O seu dispositivo não está seguro, por favor active o PIN, padrão ou password para usar a app.</string>
    <string name="alert_device_not_secure_open_settings">Abrir Settings</string>
    <string name="alert_device_not_secure_title">O seu dispositivo não está seguro</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">widgets</string>
    <string name="app_name_label">O Meu Pingo Doce</string>
    <string name="app_version">null</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="btn_12_months">12 meses</string>
    <string name="btn_30_days">30 dias</string>
    <string name="btn_3_months">3 meses</string>
    <string name="btn_accept">Aceito</string>
    <string name="btn_accept_alt">Sim, aceito</string>
    <string name="btn_accept_alt2">Aceitar</string>
    <string name="btn_accept_alt3">Aceito</string>
    <string name="btn_account">Conta</string>
    <string name="btn_add">Adicionar</string>
    <string name="btn_add_another_baby">Adicionar outro bebé</string>
    <string name="btn_add_card">Adicionar outro cartão</string>
    <string name="btn_add_to_shoppinglist">Adicionar à lista ativa</string>
    <string name="btn_add_to_shoppinglist_alt">Adicionar (%s)</string>
    <string name="btn_advance">Avançar</string>
    <string name="btn_advance_without_card">Avançar sem cartão</string>
    <string name="btn_allow">Autorizo</string>
    <string name="btn_already_confirmed_email">Já verifiquei o e-mail</string>
    <string name="btn_apply_filter">Filtrar</string>
    <string name="btn_avaliate">Avaliar</string>
    <string name="btn_baby_club_remove_from_profile">Desassociar bebé</string>
    <string name="btn_back">Voltar</string>
    <string name="btn_begin">Começar</string>
    <string name="btn_buy">Comprar</string>
    <string name="btn_buy_online">Comprar online</string>
    <string name="btn_buy_online_alt">Comprar no mercadão</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_cant_remember">Não me lembro</string>
    <string name="btn_card_association">Associar cartão</string>
    <string name="btn_change_list">Alterar lista</string>
    <string name="btn_check_club_status">Consultar dados de adesão</string>
    <string name="btn_choose">Escolher</string>
    <string name="btn_clean_filter">Limpar tudo</string>
    <string name="btn_clear_list">Limpar lista</string>
    <string name="btn_close">Fechar</string>
    <string name="btn_conclude">Concluir</string>
    <string name="btn_confirm">Confirmar</string>
    <string name="btn_consult">Consultar</string>
    <string name="btn_continue">Continuar</string>
    <string name="btn_create_account">Registar-me</string>
    <string name="btn_delete_account">Eliminar conta</string>
    <string name="btn_delete_list">Eliminar lista</string>
    <string name="btn_deny">Não aceito</string>
    <string name="btn_deny_alt">Rejeitar</string>
    <string name="btn_edit_profile">Ver e editar perfil</string>
    <string name="btn_edit_user_data">Editar dados</string>
    <string name="btn_electronic_invoce_onboarding">Confirmo e quero aderir</string>
    <string name="btn_electronic_invoce_remove">Desativar fatura eletrónica</string>
    <string name="btn_enter">Entrar</string>
    <string name="btn_enter_app">Entrar na app</string>
    <string name="btn_exit">Sair</string>
    <string name="btn_favorite_store">Confirmar Loja Preferida</string>
    <string name="btn_firebase_remote_config_not_now">Agora Não</string>
    <string name="btn_firebase_remote_config_update">Atualizar a app</string>
    <string name="btn_go_back_to_list">Voltar à lista</string>
    <string name="btn_go_to_home_page">Ir para a página principal</string>
    <string name="btn_guest_to_user">Já tenho conta, quero fazer login</string>
    <string name="btn_home">Home</string>
    <string name="btn_import">Importar do Histórico</string>
    <string name="btn_info">Informação</string>
    <string name="btn_join">Aderir</string>
    <string name="btn_join_club">Aderir ao Clube</string>
    <string name="btn_later">Mais tarde</string>
    <string name="btn_lists">Listas</string>
    <string name="btn_logout">Terminar sessão</string>
    <string name="btn_loyalty_join">Associar o Poupa Mais</string>
    <string name="btn_loyalty_request">Ver pedidos de associação</string>
    <string name="btn_loyalty_website">Visitar o site Poupa Mais</string>
    <string name="btn_new">Novo</string>
    <string name="btn_next">Seguinte</string>
    <string name="btn_no">Não</string>
    <string name="btn_no_go_back">Não, voltar</string>
    <string name="btn_not_yet">Agora não</string>
    <string name="btn_ok">OK</string>
    <string name="btn_ok_alt">OK percebi</string>
    <string name="btn_onboarding_email_sent_already_confirmed">Já confirmei o e-mail</string>
    <string name="btn_onboarding_email_sent_resend">Reenviar e-mail</string>
    <string name="btn_pdf">Pdf</string>
    <string name="btn_pickup_store">Confirmar loja</string>
    <string name="btn_profile">Ir para Conta</string>
    <string name="btn_promo">Promoções</string>
    <string name="btn_purchase_history">Ver Histórico</string>
    <string name="btn_receipt">Factura</string>
    <string name="btn_remove_card">Remover cartão</string>
    <string name="btn_search">Procurar</string>
    <string name="btn_send">Enviar</string>
    <string name="btn_shared">Partilhar com…</string>
    <string name="btn_sync">Sincronizar</string>
    <string name="dialog_rating_message">Se estiver a gostar da app do Pingo Doce, podemos pedir-lhe que partilhe a sua opinião?</string>
    <string name="dialog_rating_title">Está a gostar da nossa app?</string>
    <string name="hint_email_alt">E-mail</string>
    <string name="hint_name_first">Nome</string>
    <string name="hint_name_last">Apelido</string>
    <string name="hint_phone_number">Telefone</string>
    <string name="lbl_active_balance">Saldo Pingo Doce</string>
    <string name="lbl_active_balance_desc">Valor disponível para utilização em compras no Pingo Doce</string>
    <string name="lbl_active_benefits">Benefícios Ativos</string>
    <string name="lbl_active_benefits_desc">Descontos e outros benefícios que tem disponíveis para utilização no Pingo Doce</string>
    <string name="lbl_card_question_title">Tem cartão Poupa Mais?</string>
    <string name="lbl_club_wine_enroll_and_have_access_to">Adira ao Clube e ganhe:</string>
    <string name="lbl_club_wine_home_item_list_1">Uma garrafa de vinho à sua escolha até 10€ assim que aderir</string>
    <string name="lbl_club_wine_home_item_list_2">Descontos exclusivos para membros do clube</string>
    <string name="lbl_club_wine_home_item_list_3">Acesso a conteúdos, dicas práticas e eventos com o nosso enólogo e outros especialistas</string>
    <string name="lbl_fuel_benefit">Saldo combustível</string>
    <string name="lbl_fuel_benefit_desc">Total de descontos de combustível disponível para utilização ao abastecer em postos de combustível BP</string>
    <string name="lbl_fuel_pts">BP Premier Plus</string>
    <string name="lbl_fuel_pts_desc">Saldo de pontos BP Premier Plus</string>
    <string name="lbl_loyalty_card_help">O que tem no seu cartão</string>
    <string name="lbl_loyalty_intro_bullet_title">É tão fácil poupar mais:</string>
    <string name="lbl_loyalty_intro_item_list_1">Aceda a promoções exclusivas no Pingo Doce.</string>
    <string name="lbl_loyalty_intro_item_list_2">Ganhe descontos em combustível: Por cada 40€ em compras no Pingo Doce, acumula 2€ de saldo em combustível BP.</string>
    <string name="lbl_loyalty_intro_item_list_3">Usufrua do Catálogo BP Premierplus: Troque os seus pontos por brindes ou experiências</string>
    <string name="lbl_loyalty_virtual_card_data_confirmation_desc">Ao avançar, será criado um cartão Poupa Mais virtual, que poderá apenas usar através da sua app O Meu Pingo Doce.</string>
    <string name="lbl_loyalty_virtual_card_data_confirmation_title">Confirme os seus dados para aderir ao programa Poupa Mais</string>
    <string name="lbl_mypd_bullet_1">Ver os descontos dos produtos da sua loja</string>
    <string name="lbl_mypd_bullet_2">Gerir os seus benefícios exclusivos</string>
    <string name="lbl_mypd_bullet_3">Aderir aos Clubes Pingo Doce com ofertas exclusivas</string>
    <string name="lbl_mypd_bullet_4">Aderir ou registar o cartão Poupa Mais com apenas alguns cliques</string>
    <string name="lbl_mypd_subtitle">Olá %s,\n\nEstamos cada vez mais perto de si! Com O Meu Pingo Doce oferecemos-lhe uma experiência mais próxima dos seus gostos e com vantagens exclusivas.</string>
    <string name="lbl_mypd_title">Descubra O Meu Pingo Doce!</string>
    <string name="lbl_mypd_title_secondary">Na app O Meu Pingo Doce vai poder:</string>
    <string name="lbl_radio_not_yet">Ainda não</string>
    <string name="lbl_radio_yes">Sim</string>
</resources>