<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:icon="@drawable/ic_search_black_24dp" android:id="@+id/action_search" android:title="@string/btn_search" app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_send" android:title="@string/btn_send" app:showAsAction="never"/>
    <item android:id="@+id/action_shared" android:title="@string/btn_shared" app:showAsAction="never"/>
    <item android:id="@+id/action_sync" android:title="@string/btn_sync" app:showAsAction="never"/>
    <item android:id="@+id/action_import" android:title="@string/btn_import" app:showAsAction="never"/>
    <item android:id="@+id/action_clear" android:title="@string/btn_clear_list" app:showAsAction="never"/>
    <item android:id="@+id/action_delete" android:title="@string/btn_delete_list" app:showAsAction="never"/>
</menu>
