<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/activity_onboarding_card_question_0" android:layout_width="match_parent" android:layout_height="match_parent" android:animateLayoutChanges="true">
    <include android:id="@+id/const_toolbar" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" layout="@layout/view_toolbar_with_image"/>
    <TextView android:id="@+id/const_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/lbl_card_question_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_toolbar" style="@style/App.WidgetStyle.Title"/>
    <RadioGroup android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="80dp" android:divider="?attr/horizontalSeparatorColor" android:showDividers="middle" android:paddingStart="16dp" android:paddingEnd="0dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_title">
        <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/lbl_radio_yes"/>
        <com.google.android.material.radiobutton.MaterialRadioButton android:textSize="16sp" android:layout_width="match_parent" android:layout_height="60dp" android:text="@string/lbl_radio_not_yet"/>
    </RadioGroup>
    <com.google.android.material.button.MaterialButton android:theme="@style/App.Button" android:tag="binding_2" android:text="@string/btn_confirm" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/App.WidgetStyle.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
