<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:orientation="vertical" android:tag="layout/view_for_wine_club_why_to_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/const_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/lbl_club_wine_enroll_and_have_access_to" android:layout_marginStart="@dimen/spacing_default" android:layout_marginEnd="@dimen/spacing_default" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/App.WidgetStyle.Title"/>
    <com.google.android.material.card.MaterialCardView android:id="@+id/card2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" app:cardElevation="0dp" app:layout_constraintTop_toBottomOf="@+id/const_title">
        <LinearLayout android:orientation="vertical" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="16dp">
            <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_club_wine_home_item_list_1" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_01" style="@style/App.WidgetStyle.SubTitle"/>
            <TextView android:paddingTop="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_club_wine_home_item_list_2" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_02" style="@style/App.WidgetStyle.SubTitle"/>
            <TextView android:paddingTop="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_club_wine_home_item_list_3" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_03" style="@style/App.WidgetStyle.SubTitle"/>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</LinearLayout>
