<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/no_product_ConstraintLayout" android:tag="layout/view_app_rating_dialog_0" android:layout_width="match_parent" android:layout_height="wrap_content">
    <ImageView android:id="@+id/const_icon" android:background="@drawable/ic_rating" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="28dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0"/>
    <TextView android:id="@+id/const_rating_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/dialog_rating_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_icon" style="@style/App.WidgetStyle.Title"/>
    <TextView android:id="@+id/const_rating_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:text="@string/dialog_rating_message" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_rating_title" style="@style/App.WidgetStyle.SubTitle"/>
    <com.google.android.material.button.MaterialButton android:theme="@style/App.Button.Secondary" android:id="@+id/cancel_MaterialButton" android:layout_marginTop="34dp" android:text="@string/btn_not_yet" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toStartOf="@+id/ok_MaterialButton" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_rating_message" style="@style/App.WidgetStyle.Button"/>
    <com.google.android.material.button.MaterialButton android:theme="@style/App.Button" android:id="@+id/ok_MaterialButton" android:text="@string/btn_avaliate" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toEndOf="@+id/cancel_MaterialButton" app:layout_constraintTop_toTopOf="@+id/cancel_MaterialButton" style="@style/App.WidgetStyle.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
