<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/activity_loyalty_user_data_confirmation_0" android:layout_width="match_parent" android:layout_height="match_parent">
    <include android:id="@+id/const_toolbar" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" layout="@layout/view_toolbar_with_image"/>
    <TextView android:id="@+id/data_confirmation_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="8dp" android:text="@string/lbl_loyalty_virtual_card_data_confirmation_title" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_toolbar" style="@style/App.WidgetStyle.Title"/>
    <TextView android:id="@+id/data_confirmation_desc" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="@string/lbl_loyalty_virtual_card_data_confirmation_desc" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/data_confirmation_title" style="@style/App.WidgetStyle.SubTitle"/>
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true" app:layout_constraintTop_toBottomOf="@+id/data_confirmation_desc">
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/App.TextInputLayout" android:enabled="false" android:id="@+id/const_title_TextInputLayout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="24dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:endIconMode="2" style="@style/App.TextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText android:id="@+id/firstname_EditText" android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_name_first" android:inputType="textNoSuggestions" style="@style/App.EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/App.TextInputLayout" android:tag="binding_2" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:endIconMode="2" app:errorTextAppearance="@style/TextAppearance.TextInputLayout.Error" style="@style/App.TextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText android:tag="binding_3" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_name_last" android:inputType="textNoSuggestions" style="@style/App.EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/App.TextInputLayout" android:enabled="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:endIconMode="2" style="@style/App.TextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText android:tag="binding_4" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_phone_number" android:inputType="textNoSuggestions" style="@style/App.EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout android:theme="@style/App.TextInputLayout" android:enabled="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:layout_marginStart="16dp" android:layout_marginEnd="16dp" app:endIconMode="2" style="@style/App.TextInputLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText android:tag="binding_5" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/hint_email_alt" android:inputType="textNoSuggestions" style="@style/App.EditTextStyle"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
    <com.google.android.material.button.MaterialButton android:theme="@style/App.Button" android:id="@+id/btn_card_tutorial_next" android:tag="binding_6" android:text="@string/btn_advance" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/App.WidgetStyle.Button"/>
</androidx.constraintlayout.widget.ConstraintLayout>
