<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:tag="layout/activity_mypd_0" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <androidx.constraintlayout.widget.ConstraintLayout android:tag="binding_1" android:layout_width="match_parent" android:layout_height="wrap_content" android:animateLayoutChanges="true">
        <include android:id="@+id/const_toolbar" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toTopOf="0" layout="@layout/view_toolbar_with_image"/>
        <TextView android:id="@+id/const_title" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/lbl_mypd_title" android:layout_marginHorizontal="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_toolbar" style="@style/App.WidgetStyle.Title"/>
        <TextView android:id="@+id/const_subtitle" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:text="@string/lbl_mypd_subtitle" android:layout_marginHorizontal="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_title" style="@style/App.WidgetStyle.SubTitle"/>
        <TextView android:id="@+id/const_title_secondary" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="24dp" android:layout_marginRight="16dp" android:text="@string/lbl_mypd_title_secondary" android:layout_marginHorizontal="16dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_subtitle" style="@style/App.WidgetStyle.Title"/>
        <com.google.android.material.card.MaterialCardView android:id="@+id/const_card_view" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:layout_marginRight="16dp" android:layout_marginHorizontal="16dp" app:cardElevation="3dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_title_secondary">
            <LinearLayout android:orientation="vertical" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingVertical="16dp">
                <TextView android:id="@+id/card_bullet_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_mypd_bullet_1" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_01" style="@style/App.WidgetStyle.SubTitle"/>
                <TextView android:id="@+id/card_bullet_2" android:paddingTop="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_mypd_bullet_2" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_02" style="@style/App.WidgetStyle.SubTitle"/>
                <TextView android:id="@+id/card_bullet_3" android:paddingTop="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_mypd_bullet_3" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_03" style="@style/App.WidgetStyle.SubTitle"/>
                <TextView android:id="@+id/card_bullet_4" android:paddingTop="16dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_mypd_bullet_4" android:drawablePadding="16dp" app:drawableLeftCompat="@drawable/ic_number_04" style="@style/App.WidgetStyle.SubTitle"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.button.MaterialButton android:theme="@style/App.Button" android:id="@+id/submitMaterialButton" android:tag="binding_2" android:layout_width="match_parent" android:layout_marginBottom="16dp" android:text="@string/btn_next" app:layout_constraintBottom_toBottomOf="0" app:layout_constraintEnd_toEndOf="0" app:layout_constraintStart_toStartOf="0" style="@style/App.WidgetStyle.Button"/>
        <ImageView android:id="@+id/img_teardrop_top_right" android:layout_width="wrap_content" android:layout_height="48dp" android:layout_marginTop="8dp" android:src="@drawable/ic_img_teardrop_topright" android:layout_marginEnd="15dp" android:translationZ="-1dp" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/const_title"/>
        <ImageView android:id="@+id/img_teardrop_mid_left" android:layout_width="wrap_content" android:layout_height="81dp" android:layout_marginTop="7dp" android:src="@drawable/ic_img_teardrop_midleft" android:translationZ="-1dp" app:layout_constraintStart_toStartOf="0" app:layout_constraintTop_toBottomOf="@+id/const_title_secondary"/>
        <ImageView android:id="@+id/img_teardrop_bottom_left" android:layout_width="wrap_content" android:layout_height="32dp" android:layout_marginTop="12dp" android:src="@drawable/ic_img_teardrop_bottomleft" android:translationZ="-1dp" app:layout_constraintStart_toStartOf="@+id/const_card_view" app:layout_constraintTop_toBottomOf="@+id/const_card_view"/>
        <ImageView android:id="@+id/img_teardrop_bottom_right" android:layout_width="wrap_content" android:layout_height="110dp" android:layout_marginTop="216dp" android:src="@drawable/ic_img_teardrop_bottomright" android:translationZ="-1dp" app:layout_constraintBottom_toBottomOf="@+id/const_card_view" app:layout_constraintEnd_toEndOf="0" app:layout_constraintTop_toTopOf="@+id/const_card_view"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
